--- a/index.html
+++ b/index.html
@@ -1,61 +1,81 @@
+
 <!DOCTYPE html>
-<html>
-<head>
-    <title>PPH 2013</title>
-    <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/styles.css"/>
-    <script src='lib/jquery-1.10.1.js' type='text/javascript'></script>
-    <script src="lib/elastic.js"></script>
-    <script src="lib/elastic-jquery-client.js"></script>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="PearsonAPI SDK Dictionary Sample">
+    <meta name="author" content="Lawrie Nichols/Toby Simms">
+
+    <title>PearsonAPI SDK Dictionary Sample</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/launch.css" rel="stylesheet">
+
+    <script src="lib/jquery-1.10.1.js"></script>
+    <script src="lib/moustache.js"></script>
     <script src="lib/ICanHaz.js"></script>
+    <script src="https://rawgithub.com/PearsonAPI/Pearson-Api-SDK/master/sdk.js"></script>
     <script src="lib/app.js"></script>
 
-    <script id='tmpl_card' type='text/html'>
-        <div class="card recipes">
-            <a href = "{{thumb_link}}">
-                <img class="card-thumb" src="{{thumb}}"/>
-            </a>
-            <div class="card-title"><p>{{title}}</p></div>
-            <div class="card-desc"><p>{{desc}}</p></div>
-            <a class="api-ref" href="{{url}}">{{url}}</a>
+
+    <script id="template_entries" type='text/html'>
+        <div class="entries">
+           {{count}}
+           {{total}}
+           {{#results}}
+            <div><p>{{headword}}</p></div>
+            <div><p>{{part_of_speech}}</p></div>
+            <div><p>{{homnum}}</p></div>
+           {{/results}}
         </div>
     </script>
+  </head>
 
-</head>
-<body>
-    <div class="search-panel">
-        <h1>Pearson API Search</h1>
-        <h4>Search across all the Pearson APIs here, as found at <a href="http://developer.pearson.com/">developer.pearson.com</a></h4>
-        <input id="searchbox" placeholder="API, category or item"/>
+  <body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">PearsonAPI SDK Dictionary Sample</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
     </div>
 
-    <div class="results-panel">
+    <div class="container">
 
-        <div class="category-header" id="recipes" style="display:none">
-            <p>Recipes from the <a href="http://developer.pearson.com/api/pearson-kitchen-manager-api/apimethod/courses/190/overview">Kitchen Manager API</a></p>
+      <div class="starter-template">
+        <h2>Bootstrap starter template</h2>
+        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+      </div>
+
+      <div>
+        <p>Search: <input id="searchbox" type="text" name="search" value="" placeholder=""><button id="btn_search">Search</button>
+        </p>
         </div>
 
-        <div class="category-header" id="images" style="display:none">
-            <p>Images from the <a href="http://developer.pearson.com/api/dkimages-api/apimethod/list-images/189/overview">DK Images API</a></p>
-        </div>
-
-        <div class="category-header" id="places" style="display:none">
-            <p>Places from the <a href="http://developer.pearson.com/api/eyewitness-guides-api/apimethod/entries-guide/189/overview">V2 Travel API</a></p>
-        </div>
-
-
-        <div class="category-header" id="books" style="display:none">
-            <p>Places from the <a href="http://developer.pearson.com/api/eyewitness-guides-api/apimethod/entries-guide/189/overview">Books APIs</a></p>
-        </div>
-    </div>
-<body>
-
-    <div class="popup-panel-container" style="display:none;">
-        <div>
-            <div class="popup-panel">
-                <img class="popup-img" src=""/>
-            </div>
-        </div>
+        <div id="entries"></div> <!-- make this hidden by default -->        
     </div>
 
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="lib/bootstrap.min.js"></script>
+  </body>
 </html>
