Some small updates - need a GetByID

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div>
            <div>Showing <span class="badge">{{count}}</span> of <span class="badge">{{total}}</span></div><br/>
            {{#results}}
-            <div><a id="{{id}}" href="#">{{headword}}</a>
+            <div><a class="link_entry" id="{{id}}">{{headword}}</a>
             {{#part_of_speech}}<span class="label label-primary">{{part_of_speech}}</span>{{/part_of_speech}}
             {{#homnum}}<span class="badge">{{homnum}}</span>{{/homnum}}
             </div>
