--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <script src="lib/jquery-1.10.1.js"></script>
     <script src="lib/moustache.js"></script>
     <script src="lib/ICanHaz.js"></script>
-    <script src="https://rawgithub.com/PearsonAPI/Pearson-Api-SDK/develop/pearson_sdk.js"></script>
+    <!--<script src="https://rawgithub.com/PearsonAPI/Pearson-Api-SDK/develop/pearson_sdk.js"></script>-->
+    <script src="lib/pearson_sdk.js"></script>
+    
     <script src="lib/app.js"></script>
 
     <!-- Template for displaying the list of results found -->
