Almost all working

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <h3>PearsonAPI Dictionaries sample application</h3>
 
     <form id="search_form" action="" class="navbar-form navbar-right">
-    <div class="btn-group" data-toggle="buttons">
+    <div id="datasets" class="btn-group" data-toggle="buttons">
       <label class="btn btn-info">
         <input type="checkbox" value="ldoce5"> LDOCE
       </label>
