--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <script src="lib/jquery-1.10.1.js"></script>
     <script src="lib/handlebars.js"></script>
     <script src="lib/ICanHandlebarz.js"></script>
-    <!--<script src="https://rawgithub.com/PearsonAPI/Pearson-Api-SDK/develop/pearson_sdk.js"></script>-->
     <script src="lib/pearson_sdk.js"></script>
     
     <script src="lib/app.js"></script>
@@ -53,6 +52,7 @@
         {{#if ipa}}(ipa) {{ipa}}{{/if}}
         {{#if kk}}(kk) {{kk}}{{/if}}
          {{#audio}}<a class="audio"><span class="glyphicon glyphicon-volume-up"><audio><source src="http://api.pearson.com{{url}}"></audio></span></a>{{/audio}}
+        {{#lang}} ({{.}}) {{/lang}}
         </p>
     </script>
 
@@ -86,7 +86,7 @@
         <h4>{{headword}} {{#if gramatical_info}}<span style="font-size:75%">[{{gramatical_info.type}}]</span>{{/if}}</h4>
         {{#audio}}<a class="audio"><span class="glyphicon glyphicon-volume-up"><audio><source src="http://api.pearson.com{{url}}"></audio></span></a>{{/audio}}
         {{#if images}}
-          <img style="float:right" src="http://api.pearson.com{{images.0.url}}"/>
+          <img style="float:right" src="{{expandUrl images.0.url}}"/>
         {{/if}}
         {{#if pronunciations}}
         <h4><span class="label label-default">pronunciation</span></h4>
@@ -130,9 +130,9 @@
         <input type="checkbox" value="wordwise"> WordWise
       </label>
     </div>
-    <br/>
+    <br/><br/>
     <div class="input-group">
-       <input id="searchbox" type="Search" placeholder="Search..." class="form-control" />
+       <input id="searchbox" type="Search" placeholder="headword..." class="form-control" />
        <div class="input-group-btn">
            <button class="btn btn-info">
            <span class="glyphicon glyphicon-search"></span>
