Removed unwanted libs

--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
     <title>PearsonAPI SDK Dictionary Sample</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/bootstrap-select.css" rel="stylesheet">
-    <link href="css/bootstrap-theme.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap-theme.min.css">
     <link href="css/launch.css" rel="stylesheet">
 
-    <script src="lib/jquery-1.10.1.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>
     <script src="lib/handlebars.js"></script>
     <script src="lib/ICanHandlebarz.js"></script>
     <script src="lib/pearson_sdk.js"></script>
@@ -118,7 +116,7 @@
     <form id="search_form" action="" class="navbar-form navbar-right">
     <div id="datasets" class="btn-group" data-toggle="buttons">
       <label class="btn btn-info">
-        <input type="checkbox" value="ldoce5"> LDOCE
+        <input type="checkbox" value="ldoce5"> LDOCE5
       </label>
       <label class="btn btn-info">
         <input type="checkbox" value="lasde"> LASDE
@@ -145,14 +143,5 @@
     <div id="entries"></div> <!-- make this hidden by default -->        
     </div>
 
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="lib/bootstrap.min.js"></script>
-    <script src="lib/bootstrap-select.min.js"></script>
-    <script lang="JavaScript">
-      $('.selectpicker').selectpicker();
-    </script>
   </body>
 </html>
