Fixed issue(s) with Firefox

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div class="container">
     <h3>PearsonAPI Dictionaries sample application</h3>
 
-    <form id="search_form" action="" class="navbar-form navbar-right">
+    <form id="search_form" action="" class="navbar-form">
     
     <div class="input-group">
        <input id="searchbox" type="Search" placeholder="headword..." class="form-control" />
