leveled parsing for ff && cors for IE

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="lib/handlebars.js"></script>
     <script src="lib/ICanHandlebarz.js"></script>
     <script src="lib/pearson_sdk.js"></script>
+    <script src="lib/jquery.xdomainrequest.min.js"></script>
     
     <script src="lib/app.js"></script>
 
